feature/fix-colors: update colors from design

--- a/projects/front-components/src/lib/shared/styles/_variables/_brand.scss
+++ b/projects/front-components/src/lib/shared/styles/_variables/_brand.scss
@@ -1,7 +1,6 @@
 /* ⬇️ Brand */
 :root {
 	/* Value */
-	/* color */
 	--blue-100: #cee4f4;
 	--blue-200: #9dc9ea;
 	--blue-300: #6daddf;
@@ -24,19 +23,19 @@
 	--green-800: #085d3a;
 	--green-900: #074d31;
 	--green-950: #053321;
-	--grey-100: #f5f5f5;
-	--grey-200: #e9eaeb;
-	--grey-25: #fdfdfd;
-	--grey-300: #d5d7da;
-	--grey-400: #a4a7ae;
-	--grey-50: #fafafa;
-	--grey-500: #717680;
-	--grey-600: #535862;
-	--grey-700: #414651;
-	--grey-750: #2d2d2d;
-	--grey-800: #1c1c1c;
-	--grey-900: #191919;
-	--grey-950: #0a0d12;
+	--grey-100: #fcfcfc;
+	--grey-1000: #353534;
+	--grey-1100: #1f1f1e;
+	--grey-1200: #191919;
+	--grey-1300: #0e0e0e;
+	--grey-200: #fafaf9;
+	--grey-300: #f5f5f4;
+	--grey-400: #e7e7e6;
+	--grey-500: #d3d3d1;
+	--grey-600: #b3b3b1;
+	--grey-700: #868684;
+	--grey-800: #686866;
+	--grey-900: #525250;
 	--pure-black: #000000;
 	--pure-white: #ffffff;
 	--red-100: #fee4e2;
