--- a/projects/front-components/src/lib/shared/styles/custom-variables.scss
+++ b/projects/front-components/src/lib/shared/styles/custom-variables.scss
@@ -4,121 +4,125 @@
 :root {
 	/* Light */
 	/* color */
-	--border-disabled: var(--neutral-300);
-	--border-error: var(--error-300);
-	--border-focus: var(--primary-400);
-	--border-focus-error: var(--error-400);
-	--border-primary: var(--neutral-200);
-	--border-secondary: var(--neutral-300);
-	--border-success: var(--success-300);
-	--border-tertiary: var(--neutral-700);
-	--effects-shadows-10: #0a0d121a;
-	--effects-shadows-14: #0a0d1224;
-	--effects-shadows-18: #0a0d122e;
-	--effects-shadows-3: #0a0d1208;
-	--effects-shadows-4: #0a0d120a;
-	--effects-shadows-5: #0a0d120d;
-	--effects-shadows-6: #0a0d120f;
-	--effects-shadows-8: #0a0d1214;
-	--effects-skeleton-0: #e9eaeb00;
-	--effects-skeleton-100: #e9eaeb;
-	--icon-action: var(--neutral-600);
-	--icon-action-2: var(--neutral-600);
-	--icon-action-hover: var(--neutral-700);
-	--icon-disabled: var(--neutral-400);
-	--icon-error: var(--error-600);
-	--icon-information: var(--primary-default);
-	--icon-on-action: var(--neutral-white);
-	--icon-on-disabled: var(--neutral-400);
-	--icon-primary: var(--neutral-750);
-	--icon-secondary: var(--neutral-200);
-	--icon-success: var(--success-600);
-	--surface-action: var(--primary-default);
-	--surface-action-hover: var(--primary-600);
-	--surface-action-hover-2: var(--neutral-200);
-	--surface-action-hover-3: var(--neutral-100);
-	--surface-action-pressed: var(--primary-700);
-	--surface-action-pressed-2: var(--neutral-300);
-	--surface-disabled: var(--neutral-100);
-	--surface-disabled-selected: var(--neutral-400);
-	--surface-information: var(--neutral-750);
-	--surface-information-2: var(--primary-50);
-	--surface-page: var(--neutral-50);
-	--surface-primary: var(--neutral-white);
-	--surface-secondary: var(--neutral-50);
-	--text-action: var(--neutral-600);
-	--text-action-hover: var(--neutral-700);
-	--text-body: var(--neutral-900);
-	--text-body-2: var(--neutral-700);
-	--text-body-3: var(--neutral-600);
-	--text-body-4: var(--neutral-500);
-	--text-disabled: var(--neutral-400);
-	--text-error: var(--error-600);
-	--text-headings: var(--neutral-950);
-	--text-information: var(--primary-default);
-	--text-on-action: var(--neutral-white);
-	--text-on-disabled: var(--neutral-400);
-	--text-on-information: var(--neutral-200);
-	--text-on-information-2: var(--neutral-400);
+	--border-disabled: var(--grey-500, #d3d3d1);
+	--border-error: var(--red-300, #fda29b);
+	--border-focus: var(--blue-400, #3c92d5);
+	--border-focus-error: var(--red-400, #f97066);
+	--border-primary: var(--grey-400, #e7e7e6);
+	--border-secondary: var(--grey-500, #d3d3d1);
+	--border-success: var(--green-300, #75e0a7);
+	--border-tertiary: var(--grey-900, #525250);
+	--effects-shadows-10: #0e0e0e1a;
+	--effects-shadows-14: #0e0e0e24;
+	--effects-shadows-18: #0e0e0e2e;
+	--effects-shadows-3: #0e0e0e08;
+	--effects-shadows-4: #0e0e0e0a;
+	--effects-shadows-5: #0e0e0e0d;
+	--effects-shadows-6: #0e0e0e0f;
+	--effects-shadows-8: #0e0e0e14;
+	--icon-action: var(--grey-800, #686866);
+	--icon-action-2: var(--grey-800, #686866);
+	--icon-action-hover: var(--grey-900, #525250);
+	--icon-disabled: var(--grey-600, #b3b3b1);
+	--icon-error: var(--red-600, #d92d20);
+	--icon-information: var(--blue-500, #0b77ca);
+	--icon-on-action: var(--pure-white, #ffffff);
+	--icon-on-disabled: var(--grey-600, #b3b3b1);
+	--icon-primary: var(--grey-1000, #353534);
+	--icon-secondary: var(--grey-400, #e7e7e6);
+	--icon-success: var(--green-600, #079455);
+	--surface-action: var(--blue-500, #0b77ca);
+	--surface-action-4: var(--grey-1200, #191919);
+	--surface-action-hover: var(--blue-600, #095fa2);
+	--surface-action-hover-2: var(--grey-400, #e7e7e6);
+	--surface-action-hover-3: var(--grey-300, #f5f5f4);
+	--surface-action-hover-4: var(--grey-1000, #353534);
+	--surface-action-pressed: var(--blue-700, #074779);
+	--surface-action-pressed-2: var(--grey-500, #d3d3d1);
+	--surface-action-pressed-4: var(--grey-900, #525250);
+	--surface-backdrop: var(--grey-1300, #0e0e0e);
+	--surface-disabled: var(--grey-300, #f5f5f4);
+	--surface-disabled-selected: var(--grey-600, #b3b3b1);
+	--surface-information: var(--grey-1000, #353534);
+	--surface-information-2: var(--blue-50, #f3f8fc);
+	--surface-page: var(--grey-200, #fafaf9);
+	--surface-primary: var(--pure-white, #ffffff);
+	--surface-secondary: var(--grey-200, #fafaf9);
+	--text-action: var(--grey-800, #686866);
+	--text-action-hover: var(--grey-900, #525250);
+	--text-body: var(--grey-1200, #191919);
+	--text-body-2: var(--grey-900, #525250);
+	--text-body-3: var(--grey-800, #686866);
+	--text-body-4: var(--grey-700, #868684);
+	--text-disabled: var(--grey-600, #b3b3b1);
+	--text-error: var(--red-600, #d92d20);
+	--text-headings: var(--grey-1300, #0e0e0e);
+	--text-information: var(--blue-500, #0b77ca);
+	--text-on-action: var(--pure-white, #ffffff);
+	--text-on-disabled: var(--grey-600, #b3b3b1);
+	--text-on-information: var(--grey-400, #e7e7e6);
+	--text-on-information-2: var(--grey-600, #b3b3b1);
 
 	/* Mapped - Dark */
 	.dark {
-		--border-disabled: var(--neutral-600);
-		--border-error: var(--error-300);
-		--border-focus: var(--primary-400);
-		--border-focus-error: var(--error-400);
-		--border-primary: var(--neutral-750);
-		--border-secondary: var(--neutral-700);
-		--border-success: var(--success-300);
-		--border-tertiary: var(--neutral-200);
-		--effects-shadows-10: #0000001a;
-		--effects-shadows-14: #00000024;
-		--effects-shadows-18: #0000002e;
-		--effects-shadows-3: #00000008;
-		--effects-shadows-4: #0000000a;
-		--effects-shadows-5: #0000000d;
-		--effects-shadows-6: #0000000f;
-		--effects-shadows-8: #00000014;
-		--effects-skeleton-0: #41465100;
-		--effects-skeleton-100: #414651;
-		--icon-action: var(--neutral-100);
-		--icon-action-2: var(--neutral-100);
-		--icon-action-hover: var(--neutral-200);
-		--icon-disabled: var(--neutral-400);
-		--icon-error: var(--error-400);
-		--icon-information: var(--primary-default);
-		--icon-on-action: var(--neutral-white);
-		--icon-on-disabled: var(--neutral-400);
-		--icon-primary: var(--neutral-white);
-		--icon-secondary: var(--neutral-750);
-		--icon-success: var(--success-400);
-		--surface-action: var(--primary-default);
-		--surface-action-hover: var(--primary-600);
-		--surface-action-hover-2: var(--neutral-700);
-		--surface-action-hover-3: var(--neutral-800);
-		--surface-action-pressed: var(--primary-700);
-		--surface-action-pressed-2: var(--neutral-600);
-		--surface-disabled: var(--neutral-600);
-		--surface-disabled-selected: var(--neutral-400);
-		--surface-information: var(--neutral-50);
-		--surface-information-2: var(--primary-900);
-		--surface-page: var(--neutral-900);
-		--surface-primary: var(--neutral-800);
-		--surface-secondary: var(--neutral-900);
-		--text-action: var(--neutral-200);
-		--text-action-hover: var(--neutral-200);
-		--text-body: var(--neutral-200);
-		--text-body-2: var(--neutral-300);
-		--text-body-3: var(--neutral-400);
-		--text-body-4: var(--neutral-500);
-		--text-disabled: var(--neutral-500);
-		--text-error: var(--error-400);
-		--text-headings: var(--neutral-100);
-		--text-information: var(--primary-300);
-		--text-on-action: var(--neutral-white);
-		--text-on-disabled: var(--neutral-400);
-		--text-on-information: var(--neutral-700);
-		--text-on-information-2: var(--neutral-600);
+		--border-disabled: var(--grey-800, #686866);
+		--border-error: var(--red-300, #fda29b);
+		--border-focus: var(--blue-400, #3c92d5);
+		--border-focus-error: var(--red-400, #f97066);
+		--border-primary: var(--grey-1000, #353534);
+		--border-secondary: var(--grey-900, #525250);
+		--border-success: var(--green-300, #75e0a7);
+		--border-tertiary: var(--grey-400, #e7e7e6);
+		--effects-shadows-10: #00000066;
+		--effects-shadows-14: #0000008f;
+		--effects-shadows-18: #000000b8;
+		--effects-shadows-3: #0000001f;
+		--effects-shadows-4: #00000029;
+		--effects-shadows-5: #00000033;
+		--effects-shadows-6: #0000003d;
+		--effects-shadows-8: #00000052;
+		--icon-action: var(--grey-300, #f5f5f4);
+		--icon-action-2: var(--grey-300, #f5f5f4);
+		--icon-action-hover: var(--grey-400, #e7e7e6);
+		--icon-disabled: var(--grey-600, #b3b3b1);
+		--icon-error: var(--red-400, #f97066);
+		--icon-information: var(--blue-500, #0b77ca);
+		--icon-on-action: var(--pure-white, #ffffff);
+		--icon-on-disabled: var(--grey-600, #b3b3b1);
+		--icon-primary: var(--pure-white, #ffffff);
+		--icon-secondary: var(--grey-1000, #353534);
+		--icon-success: var(--green-400, #47cd89);
+		--surface-action: var(--blue-500, #0b77ca);
+		--surface-action-4: var(--grey-1200, #191919);
+		--surface-action-hover: var(--blue-600, #095fa2);
+		--surface-action-hover-2: var(--grey-900, #525250);
+		--surface-action-hover-3: var(--grey-1100, #1f1f1e);
+		--surface-action-hover-4: var(--grey-1000, #353534);
+		--surface-action-pressed: var(--blue-700, #074779);
+		--surface-action-pressed-2: var(--grey-800, #686866);
+		--surface-action-pressed-4: var(--grey-900, #525250);
+		--surface-backdrop: var(--grey-1300, #0e0e0e);
+		--surface-disabled: var(--grey-1000, #353534);
+		--surface-disabled-selected: var(--grey-600, #b3b3b1);
+		--surface-information: var(--grey-200, #fafaf9);
+		--surface-information-2: var(--blue-900, #021828);
+		--surface-page: var(--grey-1200, #191919);
+		--surface-primary: var(--grey-1100, #1f1f1e);
+		--surface-secondary: var(--grey-1200, #191919);
+		--text-action: var(--grey-400, #e7e7e6);
+		--text-action-hover: var(--grey-400, #e7e7e6);
+		--text-body: var(--grey-400, #e7e7e6);
+		--text-body-2: var(--grey-500, #d3d3d1);
+		--text-body-3: var(--grey-600, #b3b3b1);
+		--text-body-4: var(--grey-700, #868684);
+		--text-disabled: var(--grey-700, #868684);
+		--text-error: var(--red-400, #f97066);
+		--text-headings: var(--grey-300, #f5f5f4);
+		--text-information: var(--blue-300, #6daddf);
+		--text-on-action: var(--pure-white, #ffffff);
+		--text-on-disabled: var(--grey-600, #b3b3b1);
+		--text-on-information: var(--grey-900, #525250);
+		--text-on-information-2: var(--grey-800, #686866);
 	}
 
 	--device-size-frame: 1280px;
