feature/2960 fix size

--- a/projects/front-components/src/lib/components/toast/toast.component.html
+++ b/projects/front-components/src/lib/components/toast/toast.component.html
@@ -21,6 +21,8 @@
 
 		@if (type() === ToastTypeEnum.Error) {
 			<ss-lib-icon
+				[width]="'20'"
+				[height]="'20'"
 				[color]="Colors.IconError"
 				[icon]="IconType.Alert"
 			></ss-lib-icon>
@@ -28,6 +30,8 @@
 
 		@if (type() === ToastTypeEnum.Success) {
 			<ss-lib-icon
+				[width]="'20'"
+				[height]="'20'"
 				[color]="Colors.IconSuccess"
 				[icon]="IconType.CheckCircle"
 			></ss-lib-icon>
