--- a/projects/front-components/src/lib/components/toast/toast.component.scss
+++ b/projects/front-components/src/lib/components/toast/toast.component.scss
@@ -12,6 +12,15 @@
   @include flex-wrap;
   justify-content: space-between;
   box-shadow: var(--effects-shadows-5);
+  position: absolute;
+  left:50%;
+  transform:translate(-50%, -50%);
+  top: 0;
+  transition: 0.3s;
+
+  &__view {
+    top: 52px;
+  }
 
   &__left {
     @include flex-wrap;
