feature/1001 in progress

--- a/projects/front-components/src/lib/shared/styles/overlay.scss
+++ b/projects/front-components/src/lib/shared/styles/overlay.scss
@@ -3,3 +3,9 @@
 		background-color: var(--surface-backdrop);
 	}
 }
+
+.ss-lib-popup-global-scrolled {
+	position: fixed;
+	overflow-y: auto;
+	pointer-events: auto;
+}
