--- a/projects/test-app/src/app/stand/stand.component.scss
+++ b/projects/test-app/src/app/stand/stand.component.scss
@@ -48,3 +48,14 @@
 	display: flex;
 	justify-content: center;
 }
+
+.scrollbar-test {
+	height: 150px;
+	width: 150px;
+	display: flex;
+	flex-wrap: nowrap;
+
+	&__item {
+		white-space: nowrap;
+	}
+}
