--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -1,12 +1,11 @@
-<ss-lib-form-field>
-	<ss-lib-image-upload
-		fieldCtrl
-		[formControl]="imgCtrl"
-		[maxHeight]="1000"
-		[maxWidth]="1000"
-		[maxSize]="0.3"
-	></ss-lib-image-upload>
-</ss-lib-form-field>
+<ss-lib-image-upload
+	fieldCtrl
+	src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bf/A_cat_in_a_tree.jpg/1920px-A_cat_in_a_tree.jpg"
+	[formControl]="imgCtrl"
+	[maxHeight]="200"
+	[maxWidth]="990"
+	[maxSize]="1000000"
+></ss-lib-image-upload>
 
 <div class="spinners">
 	<ss-lib-spinner [displaySpinnerText]="true"></ss-lib-spinner>
