--- a/projects/front-components/src/lib/components/image-upload/image-upload.component.scss
+++ b/projects/front-components/src/lib/components/image-upload/image-upload.component.scss
@@ -12,6 +12,7 @@
 	border-color: var(--border-secondary);
 	border-style: dashed;
 	box-sizing: border-box;
+	text-align: center;
 
 	&__hover {
 		border-color: var(--border-focus);
