feature/1001 fix align in table

--- a/projects/front-components/src/lib/components/skeleton/skeleton-table/skeleton-table.component.html
+++ b/projects/front-components/src/lib/components/skeleton/skeleton-table/skeleton-table.component.html
@@ -5,7 +5,7 @@
 	>
 		<td
 			*ngFor="let itemTd of itemTr.items"
-			class="ss-lib-table-td"
+			class="ss-lib-table-td ss-lib-table-td-align--{{ itemTd.align }}"
 		>
 			<ss-lib-skeleton-block
 				[config]="itemTd.skeletonConfig"
