--- a/projects/front-components/src/lib/shared/styles/table.scss
+++ b/projects/front-components/src/lib/shared/styles/table.scss
@@ -66,15 +66,6 @@
 		}
 	}
 
-	&-th,
-	&-td {
-		padding: var(--ss-lib-table-td-padding);
-
-		white-space: wrap;
-		position: relative;
-		overflow: hidden;
-	}
-
 	&-th {
 		border-bottom: var(--ss-lib-table-th-border-bottom);
 		text-align: left;
@@ -83,5 +74,30 @@
 	&-td {
 		border-bottom: var(--ss-lib-table-td-border-bottom);
 		text-align: left;
+	}
+
+	&-th-align--left,
+	&-td-align--left {
+		text-align: left;
+	}
+
+	&-th-align--righ,
+	&-td-align--righ {
+		text-align: right;
+	}
+
+	&-th-align--center,
+	&-td-align--center {
+		text-align: center;
+		margin: auto;
+	}
+
+	&-th,
+	&-td {
+		padding: var(--ss-lib-table-td-padding);
+
+		white-space: wrap;
+		position: relative;
+		overflow: hidden;
 	}
 }
