--- a/projects/front-components/src/lib/components/dropdown-list/dropdown-list.component.html
+++ b/projects/front-components/src/lib/components/dropdown-list/dropdown-list.component.html
@@ -1,17 +1,23 @@
 <ng-template #dropdownTemplate>
-	<div class="dropdown__options">
-		@if (headerTemplateRef()) {
-			<ng-container
-				[ngTemplateOutlet]="headerTemplateRef()"
-			></ng-container>
+	<div
+		class="dropdown__options"
+		[style.width]="width()"
+		[style.height]="height()"
+	>
+		<ss-lib-scrollbar>
+			@if (headerTemplateRef()) {
+				<ng-container
+					[ngTemplateOutlet]="headerTemplateRef()"
+				></ng-container>
 
-			<ss-lib-divider />
-		}
+				<ss-lib-divider />
+			}
 
-		@if (!!optionsContent) {
-			<div class="dropdown__options-content">
-				<ng-content></ng-content>
-			</div>
-		}
+			@if (!!optionsContent) {
+				<div class="dropdown__options-content">
+					<ng-content></ng-content>
+				</div>
+			}
+		</ss-lib-scrollbar>
 	</div>
 </ng-template>
