--- a/projects/front-components/src/lib/components/scrollbar/scrollbar.component.scss
+++ b/projects/front-components/src/lib/components/scrollbar/scrollbar.component.scss
@@ -59,14 +59,15 @@
 	cursor: pointer;
 	pointer-events: auto;
 	background-clip: content-box;
-	box-sizing: border-box;
-	opacity: 50%;
+	box-sizing: content-box;
+	opacity: 85%;
 
 	.bar_vertical & {
 		right: 0;
 		width: 8px;
 		min-height: 24px;
 		transition: width 0.3s ease-in-out;
+		margin: 0 4px;
 	}
 
 	.bar_horizontal & {
