--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -15,8 +15,8 @@
 <ss-lib-text
 	[type]="TextType.BodyXs"
 	[weight]="TextWeight.Regular"
-	>Обычный текст</ss-lib-text
->
+	>Обычный текст
+</ss-lib-text>
 <ss-lib-text [type]="TextType.BodySm">Обычный текст</ss-lib-text>
 <ss-lib-text [type]="TextType.BodyMd">Обычный текст</ss-lib-text>
 <ss-lib-text [type]="TextType.BodyLg">Обычный текст</ss-lib-text>
@@ -25,23 +25,23 @@
 <ss-lib-text
 	[type]="TextType.HeadingXs"
 	[weight]="TextWeight.Regular"
-	>Обычный текст</ss-lib-text
->
+	>Обычный текст
+</ss-lib-text>
 <ss-lib-text
 	[type]="TextType.HeadingXs"
 	[weight]="TextWeight.Medium"
-	>Текст медиум</ss-lib-text
->
+	>Текст медиум
+</ss-lib-text>
 <ss-lib-text
 	[type]="TextType.HeadingXs"
 	[weight]="TextWeight.Semibold"
-	>Полу-жирный</ss-lib-text
->
+	>Полу-жирный
+</ss-lib-text>
 <ss-lib-text
 	[type]="TextType.HeadingXs"
 	[weight]="TextWeight.Bold"
-	>Жирный текст</ss-lib-text
->
+	>Жирный текст
+</ss-lib-text>
 
 <ss-lib-button
 	[type]="ButtonType.Primary"
@@ -554,3 +554,5 @@
 	></ss-lib-timepicker>
 </ss-lib-form-field>
 <br />
+
+<pre>{{ timepickerCtrl.value }}</pre>
