--- a/projects/front-components/src/lib/components/form-field/form-field.component.scss
+++ b/projects/front-components/src/lib/components/form-field/form-field.component.scss
@@ -100,7 +100,7 @@
 }
 
 .field-container__error-message {
-	position: absolute;
+	position: relative;
 	display: none;
 	align-items: center;
 	gap: 4px;
