--- a/projects/front-components/src/lib/components/timepicker/timepicker.component.html
+++ b/projects/front-components/src/lib/components/timepicker/timepicker.component.html
@@ -6,6 +6,7 @@
 	<ss-lib-dropdown-list
 		#dropdownTime
 		[width]="'114px'"
+		[height]="'274px'"
 	>
 		@for (time of timeIntervals; track $index) {
 			<ss-lib-dropdown-item
