--- a/projects/front-components/src/lib/components/skeleton/skeleton-table/skeleton-table.component.html
+++ b/projects/front-components/src/lib/components/skeleton/skeleton-table/skeleton-table.component.html
@@ -5,7 +5,9 @@
 	>
 		<td
 			*ngFor="let itemTd of itemTr.items"
+			[class.ss-lib-table-td-sticky]="itemTd.sticky"
 			class="ss-lib-table-td ss-lib-table-td-align--{{ itemTd.align }}"
+			[style.padding]="itemTd.padding"
 		>
 			<ss-lib-skeleton-block
 				[config]="itemTd.skeletonConfig"
