--- a/projects/front-components/src/lib/components/modal/modal.component.html
+++ b/projects/front-components/src/lib/components/modal/modal.component.html
@@ -14,19 +14,18 @@
 	<div
 		*ngIf="contentRef()"
 		class="ss-lib-modal__body"
+		[style.padding-bottom]="contentRef() ? '25px' : '32px'"
 	>
 		<ng-container *ngTemplateOutlet="contentRef()"></ng-container>
 	</div>
-	<ss-lib-divider
-		*ngIf="contentRef()"
-		class="ss-lib-modal__divider-bottom"
-	></ss-lib-divider>
-
-	<div
-		*ngIf="actionsRef()"
-		class="ss-lib-modal__footer"
-		[class.ss-lib-modal__footer-add-padding]="!contentRef()"
-	>
-		<ng-container *ngTemplateOutlet="actionsRef()"></ng-container>
+	<div class="ss-lib-modal__footer">
+		<ss-lib-divider *ngIf="contentRef()"></ss-lib-divider>
+		<div
+			*ngIf="actionsRef()"
+			class="ss-lib-modal__actions"
+			[class.ss-lib-modal__footer-add-padding]="!contentRef()"
+		>
+			<ng-container *ngTemplateOutlet="actionsRef()"></ng-container>
+		</div>
 	</div>
 </div>
