--- a/projects/front-components/src/lib/components/toast/toast.component.scss
+++ b/projects/front-components/src/lib/components/toast/toast.component.scss
@@ -22,6 +22,11 @@
     top: 52px;
   }
 
+  ss-lib-text {
+    width: 100%;
+    white-space: nowrap;
+  }
+
   &__left {
     @include flex-wrap;
     gap: 8px;
