--- a/projects/front-components/src/lib/components/datepicker/datepicker.component.html
+++ b/projects/front-components/src/lib/components/datepicker/datepicker.component.html
@@ -4,6 +4,7 @@
 	[min]="min()"
 	[max]="max()"
 	[popoverTriggerFor]="calendar"
+	[popoverTriggerDisabled]="datepickerCtrl.disabled"
 />
 
 <ss-lib-datepicker-calendar
