feature/fix-datepicker

--- a/projects/front-components/src/lib/components/timepicker/timepicker.component.html
+++ b/projects/front-components/src/lib/components/timepicker/timepicker.component.html
@@ -2,6 +2,7 @@
 	[type]="InputType.Time"
 	[formControl]="timepickerCtrl"
 	[popoverTriggerFor]="dropdownTime"
+	[popoverTriggerDisabled]="timepickerCtrl.disabled"
 >
 	<ss-lib-dropdown-list
 		#dropdownTime
