feature/fix-number-picker: replace empty value on min value on focus out

--- a/projects/front-components/src/lib/components/number-picker/number-picker.component.html
+++ b/projects/front-components/src/lib/components/number-picker/number-picker.component.html
@@ -14,7 +14,10 @@
 		(click)="!isDisabled() && changeNumberValueByStep(Direction.Previous)"
 	/>
 
-	<div class="number-picker__input-field">
+	<div
+		class="number-picker__input-field"
+		(focusout)="onCheckInputValueOnFocusout($event)"
+	>
 		<ss-lib-form-field>
 			<ss-lib-input
 				fieldCtrl
