--- a/projects/front-components/src/lib/components/image-upload/image-upload.component.html
+++ b/projects/front-components/src/lib/components/image-upload/image-upload.component.html
@@ -24,9 +24,9 @@
 					[type]="TextType.BodyXs"
 					[color]="Colors.TextBody3"
 					>PNG,SVG,JPEG (макс. разрешение
-					@if (maxWidth() || maxWidth()) {
+					@if (maxWidth() || maxHeight()) {
 						{{ maxWidth() || 'неограничено ' }}х{{
-							maxWidth() || ' неограничено'
+							maxHeight() || ' неограничено'
 						}}{{ 'px' }})
 					} @else {
 						неограничено)
