--- a/projects/front-components/src/lib/components/modal/modal.component.scss
+++ b/projects/front-components/src/lib/components/modal/modal.component.scss
@@ -9,6 +9,7 @@
 	box-shadow: var(--shadow-xl);
 	position: relative;
 	margin: 52px 0;
+	overflow: hidden;
 
 	&__header {
 		padding: 24px 24px 0 24px;
