--- a/projects/front-components/src/lib/components/light-box/light-box.component.html
+++ b/projects/front-components/src/lib/components/light-box/light-box.component.html
@@ -2,8 +2,8 @@
 	<img
 		alt=""
 		[ngSrc]="src"
-		[width]="1280"
-		[height]="400"
+		[width]="width"
+		[height]="height"
 	/>
 	<div class="ss-lib-light-box__close">
 		<ss-lib-overlay-button
