--- a/projects/front-components/src/lib/components/modal/modal.component.scss
+++ b/projects/front-components/src/lib/components/modal/modal.component.scss
@@ -3,7 +3,6 @@
 	height: 100%;
 	display: flex;
 	flex-direction: column;
-	box-sizing: border-box;
 	background: var(--surface-primary);
 	border-radius: var(--border-radius-xl);
 	box-shadow: var(--shadow-xl);
@@ -27,6 +26,7 @@
 		z-index: 1;
 		background-color: var(--surface-primary);
 		border-radius: 0 0 var(--border-radius-xl) var(--border-radius-xl);
+		margin-left: 1px;
 	}
 
 	&__actions {
