--- a/projects/front-components/src/lib/components/badge/badge.component.scss
+++ b/projects/front-components/src/lib/components/badge/badge.component.scss
@@ -1,11 +1,6 @@
 .ss-lib-badge {
 	display: inline-block;
-	box-shadow:
-		0 1px 2px 0 var(--effects-shadows-5),
-		0 -2px 0 0 var(--effects-shadows-5) inset,
-		0 0 0 1px
-			var(--app-shadow-xs-skeumorphic-border, var(--effects-shadows-18))
-			inset;
+	box-shadow: var(--shadow-xs-skeumorphic2);
 
 	&.size-md {
 		padding: 10px;
@@ -17,6 +12,18 @@
 
 	&.size-xl {
 		padding: 14px;
+	}
+
+	&.default {
+		outline: 1px solid var(--border-primary);
+	}
+
+	&.success {
+		outline: 1px solid var(--border-success);
+	}
+
+	&.error {
+		outline: 1px solid var(--border-error);
 	}
 
 	&.square {
