date-time-range

--- a/projects/front-components/src/lib/components/data-time-picker-range/data-time-picker-range.component.html
+++ b/projects/front-components/src/lib/components/data-time-picker-range/data-time-picker-range.component.html
@@ -2,7 +2,16 @@
 	class="ss-lib-data-time-picker-range"
 	[formGroup]="formGroup"
 >
-	<ss-lib-date-time-picker formControlName="start"></ss-lib-date-time-picker>
+	<ss-lib-date-time-picker
+		formControlName="start"
+		[min]="min()"
+		[max]="max()"
+	></ss-lib-date-time-picker>
 	<ss-lib-text>-</ss-lib-text>
-	<ss-lib-date-time-picker formControlName="end"></ss-lib-date-time-picker>
+	<ss-lib-date-time-picker
+		formControlName="end"
+		[min]="min()"
+		[max]="max()"
+	>
+	</ss-lib-date-time-picker>
 </form>
