feature/datepicker-input-fix-min-max: remove min/max from datepicker input

--- a/projects/front-components/src/lib/components/datepicker/datepicker.component.html
+++ b/projects/front-components/src/lib/components/datepicker/datepicker.component.html
@@ -1,8 +1,8 @@
 <ss-lib-input
 	[formControl]="datepickerCtrl"
 	[type]="InputType.Date"
-	[min]="min()"
-	[max]="max()"
+	[min]="firstNativeDay"
+	[max]="lastNativeDay"
 	[popoverTriggerFor]="calendar"
 	[popoverTriggerDisabled]="datepickerCtrl.disabled"
 />
